# Dragonglasswallet

./: .gitignore  .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake~  README.md  README.md~
src/: resources.qrc
src/gui/ui/: aboutdialog.ui  changepassworddialog.ui  exitwidget.ui  mainwindow.ui  newaddressdialog.ui  newpassworddialog.ui  overviewframe.ui  passworddialog.ui  receiveframe.ui  sendframe.ui  transactiondetailsdialog.ui  transactionframe.ui  transferframe.ui
